--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="piles.css">
-        <title>BONES</title>
+        <title>ALTER</title>
         <link rel="icon" type="image/png" href="https://i.ibb.co/WxtSQTB/favicon.png"/>
         <style>
             .piles {
@@ -30,7 +30,7 @@
 
 <div class="piles">
 
-    <a href="">
+    <a href="http://greeneggsandyam.com/A">
         <img src="https://i.ibb.co/rZj6Kfm/Asset-1-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;">
     </a>
     <a href="">
