--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="piles.css">
+        <link rel="stylesheet" href="pile.css">
         <title>ALTER</title>
         <link rel="icon" type="image/png" href="https://i.ibb.co/WxtSQTB/favicon.png"/>
         <style>
@@ -26,14 +26,14 @@
 
 
 
- <body style="margin:0px">
+ <body bgcolor="white" style="margin:0px">
 
 <div class="piles">
 
     <a href="http://greeneggsandyam.com/A">
         <img src="https://i.ibb.co/rZj6Kfm/Asset-1-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;">
     </a>
-    <a href="">
+    <a href="http://greeneggsandyam.com/B">
         <img src="https://i.ibb.co/hs7bbLd/Asset-2-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;">
     </a>
     <a href="">
