--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <a href="http://greeneggsandyam.com/B">
         <img src="https://i.ibb.co/hs7bbLd/Asset-2-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;">
     </a>
-    <a href="">
+    <a href="http://greeneggsandyam.com/C">
         <img src="https://i.ibb.co/KbcWVvq/Asset-3-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;">
     </a>
     <a href="">    
