--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <a href="http://greeneggsandyam.com/A">
         <img src="https://i.ibb.co/rZj6Kfm/Asset-1-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;">
     </a>
-    <a href="http://greeneggsandyam.com/B">
+    <a href="http://greeneggsandyam.com/L">
         <img src="https://i.ibb.co/hs7bbLd/Asset-2-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;">
     </a>
-    <a href="http://greeneggsandyam.com/C">
+    <a href="http://greeneggsandyam.com/T">
         <img src="https://i.ibb.co/KbcWVvq/Asset-3-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;">
     </a>
     <a href="">    
