--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <a href="http://greeneggsandyam.com/T">
         <img src="https://i.ibb.co/KbcWVvq/Asset-3-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;">
     </a>
-    <a href="">    
+    <a href="http://greeneggsandyam.com/ERR">    
         <img src="https://i.ibb.co/wWy1R3H/Asset-4-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;margin-bottom: 10px;">
     </a>
 
