--- a/index.html
+++ b/index.html
@@ -3,23 +3,27 @@
  <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="pile.css">
+        <link rel="stylesheet" href="alters.css">
         <title>ALTER</title>
         <link rel="icon" type="image/png" href="https://i.ibb.co/WxtSQTB/favicon.png"/>
         <style>
             .piles {
             position: absolute;
             text-align: center;
-            margin-top: 35%;
+            margin-top: 33%;
             }
-            .back {
-
+           
+            .alter {
+            margin-top:5%;
             }
               
-            a:visited { text-decoration: none; color:wheat; }
-            a:hover { text-decoration: none; color:wheat; }
-            a:focus { text-decoration: none; color:wheat; }
-            a:hover, a:active { text-decoration: none; color:wheat }   
+            a:visited { text-decoration: none; color:rgba(255, 255, 255, 0); }
+            a:hover { text-decoration: none; color:rgba(255, 255, 255, 0); }
+            a:focus { text-decoration: none; color:rgba(255, 255, 255, 0); }
+            a::before {text-decoration: none; color:rgba(255, 255, 255, 0); }
+            a:active { text-decoration: none; color:rgba(255, 255, 255, 0);}
+            a:after {text-decoration: none; color:rgba(255, 255, 255, 0); }  
+            a:link {text-decoration: none; color:rgba(255, 255, 255, 0); }  
 
         </style>
  </head>
@@ -27,26 +31,27 @@
 
 
  <body bgcolor="white" style="margin:0px">
-
+<div>
 <div class="piles">
 
     <a href="http://greeneggsandyam.com/A">
-        <img src="https://i.ibb.co/rZj6Kfm/Asset-1-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;">
+        <img src="https://i.ibb.co/PMR0C0X/pile3-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;">
     </a>
     <a href="http://greeneggsandyam.com/L">
-        <img src="https://i.ibb.co/hs7bbLd/Asset-2-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;">
+        <img src="https://i.ibb.co/PMR0C0X/pile3-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;">
     </a>
     <a href="http://greeneggsandyam.com/T">
-        <img src="https://i.ibb.co/KbcWVvq/Asset-3-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;">
+        <img src="https://i.ibb.co/PMR0C0X/pile3-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;">
     </a>
     <a href="http://greeneggsandyam.com/ERR">    
-        <img src="https://i.ibb.co/wWy1R3H/Asset-4-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;margin-bottom: 10px;">
+        <img src="https://i.ibb.co/PMR0C0X/pile3-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;">
     </a>
 
 </div>
 
-<div class="back">
-        <img src="https://i.ibb.co/b3Yq9yb/fifty.png" width='100%' >
+<div class="alter">
+        <img src="https://i.ibb.co/XxDtNxr/alter-300x.png" width='100%'>
+</div>
 </div>
 
 
