--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 
- <body bgcolor="white" style="margin:0px">
+ <body  style="margin:0px">
 <div>
 <div class="piles">
 
@@ -44,7 +44,7 @@
         <img src="https://i.ibb.co/PMR0C0X/pile3-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;">
     </a>
     <a href="http://greeneggsandyam.com/ERR">    
-        <img src="https://i.ibb.co/PMR0C0X/pile3-300x.png" width="15%" style="margin-left: 20px;margin-right: 20px;">
+        <img src="https://i.ibb.co/PMR0C0X/pile3-300x.png" width="15%" style="margin-left: 150px;margin-right: 20px;">
     </a>
 
 </div>
