--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </div>
 
 <div class="alter">
-        <img src="https://i.ibb.co/XxDtNxr/alter-300x.png" width='100%'>
+        <img src="https://i.ibb.co/pj96FZQ/alter1-300x.png" width='100%'>
 </div>
 </div>
 
